Update git action permission to allow github to add token injection env

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -41,6 +41,9 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: backend-ci
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     environment: backend
     defaults:
       run:
