--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -74,7 +74,7 @@ jobs:
           gcloud builds submit . \
             --service-account=projects/${{ secrets.GCP_PROJECT_ID }}/serviceAccounts/${{ secrets.GCP_SA_EMAIL }} \
             --gcs-log-dir=gs://${{ secrets.GCP_PROJECT_ID }}-cloudbuild-logs \
-            --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ env.SERVICE_NAME }}
+            --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ env.SERVICE_NAME }}:latest
 
       - name: Deploy to Cloud Run
         run: |
