--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file: .env.local
     ports:
       - "8080:8080"
     networks:
