--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -42,9 +42,12 @@ psutil==6.0.0
 psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pure-eval==0.2.3
+pycountry==24.6.1
 pycparser==2.23
 pydantic==2.12.5
 pydantic-core==2.41.5
+pydantic-extra-types==2.10.6
+pydantic-settings==2.12.0
 pygments==2.18.0
 pytest==9.0.2
 python-dateutil==2.9.0.post0
