--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -4,6 +4,10 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file: .env.local
+    volumes:
+      - ./key.json:/secrets/key.json:ro
+    environment:
+      - GOOGLE_APPLICATION_CREDENTIALS=/secrets/key.json
     ports:
       - "8080:8080"
     networks:
