--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "decorator==5.1.1",
     "executing==2.1.0",
     "fastapi[standard]==0.115.2",
+    "google-cloud-firestore>=2.22.0",
     "httpx>=0.28.1",
     "ipykernel==6.29.5",
     "ipython==8.27.0",
