--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,10 @@ annotated-types==0.7.0
 anyio==4.12.0
 appnope==0.1.4
 asttokens==2.4.1
+cachetools==6.2.4
 certifi==2025.8.3
 cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.3.1
 comm==0.2.2
 debugpy==1.8.5
@@ -15,6 +17,13 @@ fastapi==0.115.2
 fastapi-cli==0.0.16
 fastapi-cloud-cli==0.6.0
 fastar==0.8.0
+google-api-core==2.28.1
+google-auth==2.45.0
+google-cloud-core==2.5.0
+google-cloud-firestore==2.22.0
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.76.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.7.1
@@ -38,10 +47,14 @@ pexpect==4.9.0
 platformdirs==4.3.2
 pluggy==1.6.0
 prompt-toolkit==3.0.47
+proto-plus==1.27.0
+protobuf==6.33.2
 psutil==6.0.0
 psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pure-eval==0.2.3
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
 pycountry==24.6.1
 pycparser==2.23
 pydantic==2.12.5
@@ -55,9 +68,11 @@ python-dotenv==1.2.1
 python-multipart==0.0.20
 pyyaml==6.0.3
 pyzmq==27.1.0
+requests==2.32.5
 rich==14.2.0
 rich-toolkit==0.17.0
 rignore==0.7.6
+rsa==4.9.1
 sentry-sdk==2.47.0
 shellingham==1.5.4
 six==1.16.0
