--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -7,7 +7,8 @@ services:
     volumes:
       - ./key.json:/secrets/key.json:ro
     environment:
-      - GOOGLE_APPLICATION_CREDENTIALS=/secrets/key.json
+      GOOGLE_APPLICATION_CREDENTIALS: /secrets/key.json
+      APP_ENV: production
     ports:
       - "8080:8080"
     networks:
