--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    env_file: .env.local
+    env_file: .env
     volumes:
       - ./key.json:/secrets/key.json:ro
     environment:
