--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,7 +21,9 @@ google-api-core==2.28.1
 google-auth==2.45.0
 google-cloud-core==2.5.0
 google-cloud-firestore==2.22.0
+google-cloud-secret-manager==2.26.0
 googleapis-common-protos==1.72.0
+grpc-google-iam-v1==0.14.3
 grpcio==1.76.0
 grpcio-status==1.76.0
 h11==0.16.0
