build(dev): update the development environment to enable firebase emulator access

--- a/backend/compose.test.yml
+++ b/backend/compose.test.yml
@@ -1,6 +1,8 @@
 services:
   firestore:
-    build: ./docker/firestore
+    build:
+      context: .
+      dockerfile: ./docker/firestore/Dockerfile.test
     networks:
       - backend-net
     ports:
