--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,11 +33,13 @@ dependencies = [
     "psycopg2-binary==2.9.11",
     "ptyprocess==0.7.0",
     "pure-eval==0.2.3",
+    "pwdlib[argon2]>=0.3.0",
     "pycountry>=24.6.1",
     "pycparser==2.23",
     "pydantic-extra-types>=2.10.6",
     "pydantic-settings>=2.12.0",
     "pygments==2.18.0",
+    "pyjwt[crypto]>=2.10.1",
     "pytest>=9.0.2",
     "python-dateutil==2.9.0.post0",
     "six==1.16.0",
