--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.7.0
 anyio==4.12.0
 appnope==0.1.4
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
 asttokens==2.4.1
 cachetools==6.2.4
 certifi==2025.8.3
@@ -8,6 +10,7 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
 comm==0.2.2
+cryptography==46.0.3
 debugpy==1.8.5
 decorator==5.1.1
 dnspython==2.8.0
@@ -55,6 +58,7 @@ psutil==6.0.0
 psycopg2-binary==2.9.11
 ptyprocess==0.7.0
 pure-eval==0.2.3
+pwdlib==0.3.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
 pycountry==24.6.1
@@ -64,6 +68,7 @@ pydantic-core==2.41.5
 pydantic-extra-types==2.10.6
 pydantic-settings==2.12.0
 pygments==2.18.0
+pyjwt==2.10.1
 pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
