build(docker): Reorganize docker related files

--- a/backend/compose.test.yml
+++ b/backend/compose.test.yml
@@ -2,13 +2,16 @@ services:
   firestore:
     build:
       context: .
-      dockerfile: ./docker/firestore/Dockerfile.test
+      dockerfile: ./docker/firestore/test.Dockerfile
     networks:
       - backend-net
     ports:
-      - "8000"
+      - 8000:8000 # firestore
+      - 4400:4400 # Emulator Hub
+    volumes:
+      - ./docker/firestore/test.firebase.json:/app/firebase.json:ro
     healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "8000"]
+      test: ["CMD", "curl", "-sf", "http://localhost:4400"]
       interval: 2s
       timeout: 2s
       retries: 30
