--- a/backend/compose.dev.yml
+++ b/backend/compose.dev.yml
@@ -2,7 +2,7 @@ services:
   firestore:
     build:
       context: .
-      dockerfile: ./docker/firestore/Dockerfile.dev
+      dockerfile: ./docker/firestore/dev.Dockerfile
     networks:
       - backend-net
     ports:
@@ -10,7 +10,7 @@ services:
       - 4000:4000 # ui
       - 4400:4400 # Emulator Hub
     volumes:
-      - ./firebase.json:/app/firebase.json:ro
+      - ./docker/firestore/dev.firebase.json:/app/firebase.json:ro
       - .cache/firebase/emulators/:/app/.cache/firebase/emulators/
     healthcheck:
       test: ["CMD", "curl", "-sf", "http://localhost:4400"]
