--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "appnope==0.1.4",
     "asttokens==2.4.1",
+    "authlib>=1.6.6",
     "certifi==2025.8.3",
     "cffi==2.0.0",
     "comm==0.2.2",
@@ -19,6 +20,7 @@ dependencies = [
     "httpx>=0.28.1",
     "ipykernel==6.29.5",
     "ipython==8.27.0",
+    "itsdangerous>=2.2.0",
     "jedi==0.19.1",
     "jupyter-client==8.6.2",
     "jupyter-core==5.7.2",
