--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ appnope==0.1.4
 argon2-cffi==25.1.0
 argon2-cffi-bindings==25.1.0
 asttokens==2.4.1
+authlib==1.6.6
 cachetools==6.2.4
 certifi==2025.8.3
 cffi==2.0.0
@@ -37,6 +38,7 @@ idna==3.11
 iniconfig==2.3.0
 ipykernel==6.29.5
 ipython==8.27.0
+itsdangerous==2.2.0
 jedi==0.19.1
 jinja2==3.1.6
 jupyter-client==8.6.2
