fix(production): fix cloud run command and modify local production environment to reflect what's happening on the cloud run

--- a/backend/compose.yml
+++ b/backend/compose.yml
@@ -3,7 +3,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    env_file: .env
+    env_file:
+      - ./.env.local.prod
     volumes:
       - ./key.json:/secrets/key.json:ro
     environment:
