--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -87,7 +87,4 @@ jobs:
             --allow-unauthenticated \
             --service-account ${{ secrets.GCP_SA_EMAIL }} \
             --memory 4Gi \
-            --set-env-vars "
-            APP_ENV=${APP_ENV},
-            GCP_PROJECT_ID=${GCP_PROJECT_ID}
-          "
+            --set-env-vars "APP_ENV=${APP_ENV},GCP_PROJECT_ID=${GCP_PROJECT_ID}"
