chore(README): add a more comprehensive instructions on how to spin up the backend server

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -4,9 +4,15 @@ on:
     branches:
       - main
       - heaven
+    paths-ignore:
+      - "**/README.md"
+      - "READDME.md"
   pull_request:
     branches:
       - main
+    paths-ignore:
+      - "**/README.md"
+      - "READDME.md"
 
 jobs:
   backend-ci:
