--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,6 @@ FROM python:3.14
 
 WORKDIR /app
 COPY requirements.txt .
-RUN pip install --upgrade pip
-RUN pip install --no-cache -r requirements.txt 
-
+RUN pip install --no-cache-dir --upgrade -r requirements.txt 
 COPY . .
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["fastapi", "run", "main.py", "--port", "8080"]
