Google AI call endpoint established

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,10 +22,11 @@ fastapi-cli==0.0.16
 fastapi-cloud-cli==0.6.0
 fastar==0.8.0
 google-api-core==2.28.1
-google-auth==2.45.0
+google-auth==2.47.0
 google-cloud-core==2.5.0
 google-cloud-firestore==2.22.0
 google-cloud-secret-manager==2.26.0
+google-genai>=1.64.0
 googleapis-common-protos==1.72.0
 grpc-google-iam-v1==0.14.3
 grpcio==1.76.0
